Deleting keyframe crashes blender (Grease Pencil) #69883

Closed
opened 2019-09-14 21:52:29 +02:00 by Baran Yagcioglu · 3 comments

Operating system: Windows 10 Home 1809
Graphics card: Intel UHD 630

Broken: version: 2.81 (sub 11), branch: master, commit date: 2019-09-14 14:25, hash: 38cc53a168, type: Release
build date: 14/09/2019, 07:38

In Edit Mode of a GP object, when multiframe ON, deleting keyframe crashes blender.

Exact steps for others to reproduce the error
Open blender with the "2D animation" option,
draw a circle,
go to edit mode,
go to frame 20,
press A to select all points of circle,
press G to move them some other location,
switch to multiframe option ON,
select ALL frames (there are 2 of them),
go to frame 10,
in 3D viewport hit X, select "frame" option,
blender crashes.

video : click
blend file: click

Operating system: Windows 10 Home 1809 Graphics card: Intel UHD 630 Broken: version: 2.81 (sub 11), branch: master, commit date: 2019-09-14 14:25, hash: 38cc53a168d2, type: Release build date: 14/09/2019, 07:38 In Edit Mode of a GP object, when multiframe ON, deleting keyframe crashes blender. **Exact steps for others to reproduce the error** Open blender with the "2D animation" option, draw a circle, go to edit mode, go to frame 20, press A to select all points of circle, press G to move them some other location, switch to multiframe option ON, select ALL frames (there are 2 of them), go to frame 10, in 3D viewport hit X, select "frame" option, blender crashes. video : [click ](https://www.dropbox.com/s/jekb70ja2e0gljp/grease_pencil_delete_keyframe_crashes.mp4?dl=0) blend file: [click ](https://www.dropbox.com/s/awpuofnosr4ddvv/grease_pencil_delete_keyframe_crashes.blend?dl=0)

Added subscriber: @BaranYagcioglu

Added subscriber: @BaranYagcioglu
Antonio Vazquez self-assigned this 2019-09-15 18:52:34 +02:00

This issue was referenced by bdc94ef4b9

This issue was referenced by bdc94ef4b93eac3b6fc08ec1bc6819fb907fead4

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#69883
No description provided.