Fix T69883: Deleting keyframe crashes blender

When delete in multiframe node the active frame gets NULL.